updating document files

--- a/resumes/jeffrey.hellrung.research.tex
+++ b/resumes/jeffrey.hellrung.research.tex
@@ -32,7 +32,7 @@ Los Angeles, CA \ 90025-5699 \hfill (801) 920-8773
 \begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
 {\small OBJECTIVE} &
 \begin{minipage}[t]{\CWb\columnwidth}
-\par Obtain a postdoctoral research position studying scientific computing problems.
+\par Obtain a research position investigating algorithmically challenging problems in scientific computing.
 \end{minipage}
 \end{tabular}
 
@@ -84,27 +84,27 @@ Graduated with High Distinction, Honors in Mathematics %\\
 \begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
 {\small EXPERIENCE} &
 \begin{minipage}[t]{\CWb\columnwidth}
-\par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2010.  Teaching assistant for Professor Joseph Teran's week-long workshop on nonlinear elasticity.
-\par \textbf{Walt Disney Animation Studios}, Burbank, CA; summer 2008.  Created a Maya plugin to volumetrically fracture nonvolumetric (i.e., quad surfaces) animation models.
+\par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2010. Teaching assistant for Professor Joseph Teran's week-long workshop on nonlinear elasticity.
+\par \textbf{Walt Disney Animation Studios}, Burbank, CA; summer 2008. Created a Maya plugin front-end and developed the back-end algorithms to volumetrically fracture non-volumetric (i.e., quad surface) animation models.
 \vspace{\VSEX}
-\par \textbf{The Aerospace Corporation}, El Segundo, CA; summer 2005, 2006, 2007.  Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering).  Created and modified existing code in C, C{\tt ++}, and Perl.  Used Qt 4 to develop cross-platform graphical user interfaces in C{\tt ++}.  Designed and prototyped several algorithms to solve satellite positioning problems.
+\par \textbf{The Aerospace Corporation}, El Segundo, CA; summer 2005, 2006, 2007. Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering). Created and modified existing code in C, C{\tt ++}, and Perl. Used Qt 4 to develop cross-platform graphical user interfaces in C{\tt ++}. Designed and prototyped several algorithms to solve satellite positioning problems.
 \vspace{\VSEX}
-\par \textbf{Teaching Fellow for Department of Mathematics}, UCLA, Los Angeles, CA; 2005 -- 2011.  Led discussion sections to review lecture material, tutored at the Student Math Center, prepared review sessions before exams, and held office hours to provide students with additional help.  %Classes include Math 32A, 32B, 33A, 33B, 132, 151A, 157, 269A (x3), 269B (x2); PIC 60.
+\par \textbf{Teaching Fellow for Department of Mathematics}, UCLA, Los Angeles, CA; 2005 -- 2011. Led discussion sections to review lecture material, tutored at the Student Math Center, prepared review sessions before exams, and held office hours to provide students with additional help. %Classes include Math 32A, 32B, 33A, 33B, 132, 151A, 157, 269A (x3), 269B (x2); PIC 60.
 \vspace{\VSEX}
-\par \textbf{Clinic Project Manager serving Hewlett-Packard}, HMC, Claremont, CA; 2004 -- 2005.  Headed a team of four to deliver to HP Labs several tools written in Matlab$^{\rm (R)}$ to analyze and correct printer drift, as well as mid-year and final reports detailing our approaches.  Presented our findings at Harvey Mudd College and directly to Hewlett-Packard in Palo Alto, CA.
+\par \textbf{Clinic Project Manager serving Hewlett-Packard}, HMC, Claremont, CA; 2004 -- 2005. Headed a team of four to deliver to HP Labs several tools written in Matlab$^{\rm (R)}$ to analyze and correct printer drift, as well as mid-year and final reports detailing our approaches. Presented our findings at Harvey Mudd College and directly to Hewlett-Packard in Palo Alto, CA.
 \vspace{\VSEX}
-\par \textbf{Auditude$^{\rm TM}$, Inc.}, Los Angeles, CA; summer 2004.  Constructed several test scripts to automate the execution, collection, and compilation of tests and their results, with the aim of optimizing the BroadcastID infrastructure.  Wrote several technical summaries analyzing said results and recommending potential efficiency improvements.
+\par \textbf{Auditude$^{\rm TM}$, Inc.}, Los Angeles, CA; summer 2004. Constructed several test scripts to automate the execution, collection, and compilation of tests and their results, with the aim of optimizing the BroadcastID infrastructure. Wrote several technical summaries analyzing said results and recommending potential efficiency improvements.
 \vspace{\VSEX}
-\par \textbf{Research on Spatiotemporal Pattern Formation under Turing Instabilities}, HMC, Claremont, CA; summer 2003.  Programmed (and used) several programs in Matlab$^{\rm (R)}$ (totaling approximately 20,000 lines of code) to solve reaction-diffusion partial differential equations on growing 2-dimensional surfaces.  Implemented several different numerical integration schemes to solve these systems of PDEs.
+\par \textbf{Research on Spatiotemporal Pattern Formation under Turing Instabilities}, HMC, Claremont, CA; summer 2003. Programmed and used several programs in Matlab$^{\rm (R)}$ (totaling approximately 20,000 lines of code) to solve reaction-diffusion partial differential equations on growing 2-dimensional surfaces. Implemented and studied several different numerical integration schemes to solve these systems of PDEs.
 \vspace{\VSEX}
-\par \textbf{Academic Excellence Mathematics Tutor}, HMC, Claremont, CA; 2003 - 2005.  Tutored students in linear algebra, differential equations, multivariable calculus, discrete mathematics; conducted workshops and exam review sessions.
-%\par \textbf{Computer Science 60 (Principles of Computer Science) ``Grutor''}, HMC, Claremont, CA; 2002 - 2005.  Graded course assignments; tutored students on the principles of computer science.
-%\par \textbf{Mathematics 131 (Mathematical Analysis) Tutor}, HMC, Claremont, CA; spring 2004.  Tutored students in real analysis.
-%\par \textbf{Mathematics 173 (Advanced Linear Algebra) Grader, HMC, Claremont, CA; spring 2005.  Graded course assignments.
-%\par \textbf{Mathematics 055 (Discrete Mathematics) Grader/Tutor}, HMC, Claremont, CA; fall 2002.  Graded course assignments; tutored students in discrete mathematics.
-\par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2003.  Attended lectures on wavelets, partial differential equations, and Fourier analysis.
-%\par \textbf{Carpet Installer Assistant for R.C. Willey}, Riverdale, UT, summer 2002.  Pulled up old carpet, padded, laid carpet, stretched, and trimmed.
-%\par \textbf{Summer Mathematics Camp}, University of Utah, Salt Lake City, UT, summer 2000.  Studied number theory, graph theory, knot theory, geometry.
+\par \textbf{Academic Excellence Mathematics Tutor}, HMC, Claremont, CA; 2003 - 2005. Tutored students in linear algebra, differential equations, multivariable calculus, discrete mathematics; conducted workshops and exam review sessions.
+%\par \textbf{Computer Science 60 (Principles of Computer Science) ``Grutor''}, HMC, Claremont, CA; 2002 - 2005. Graded course assignments; tutored students on the principles of computer science.
+%\par \textbf{Mathematics 131 (Mathematical Analysis) Tutor}, HMC, Claremont, CA; spring 2004. Tutored students in real analysis.
+%\par \textbf{Mathematics 173 (Advanced Linear Algebra) Grader, HMC, Claremont, CA; spring 2005. Graded course assignments.
+%\par \textbf{Mathematics 055 (Discrete Mathematics) Grader/Tutor}, HMC, Claremont, CA; fall 2002. Graded course assignments; tutored students in discrete mathematics.
+\par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2003. Attended lectures on wavelets, partial differential equations, and Fourier analysis.
+%\par \textbf{Carpet Installer Assistant for R.C. Willey}, Riverdale, UT, summer 2002. Pulled up old carpet, padded, laid carpet, stretched, and trimmed.
+%\par \textbf{Summer Mathematics Camp}, University of Utah, Salt Lake City, UT, summer 2000. Studied number theory, graph theory, knot theory, geometry.
 \end{minipage}
 \end{tabular}
 
@@ -114,12 +114,12 @@ Graduated with High Distinction, Honors in Mathematics %\\
 {\small PUBLICATIONS} &
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
-\par ``A Second-Order Virtual Node Algorithm for Nearly Incompressible Linear Elasticity in Irregular Domains.''  Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran.  2011.  Submitted.
-\par ``A Second-Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.''  \textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran.  Journal of Computational Physics, 2011.  To appear.
-\par ``Simulating Crack Propagation with XFEM and a Hybrid Mesh.''  C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran.  International Journal for Numerical Methods in Engineering, 2010.  In press.
-\par ``Geometric Fracture Modeling in BOLT.'' \textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran.  ACM SIGGRAPH 2009 (sketch).
-\par ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.''  E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting.  Medicine Meets Virtual Reality 17, 2009.
-\par ``Risk assessment of real time digital control systems.''  M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}.  Proceedings of the RAMS '06.  Annual Reliability and Maintainability Symposium, 2006.  Pages 409 - 415.
+\par ``A Second-Order Virtual Node Algorithm for Nearly Incompressible Linear Elasticity in Irregular Domains.'' Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. 2011. (submitted)
+\par ``A Second-Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. Journal of Computational Physics, 2011. (accepted)
+\par ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran. International Journal for Numerical Methods in Engineering, 2011.
+\par ``Geometric Fracture Modeling in BOLT.'' \textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran. ACM SIGGRAPH 2009 (sketch).
+\par ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. Medicine Meets Virtual Reality 17, 2009.
+\par ``Risk assessment of real time digital control systems.'' M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006. Pages 409 - 415.
 \end{minipage}
 \end{tabular}
 
