--- a/courses/ucla/2011-2012/winter/homework1/homework1.tex
+++ b/courses/ucla/2011-2012/winter/homework1/homework1.tex
@@ -6,6 +6,9 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 
+\providecommand{\abs}[1]{\left\lvert#1\right\rvert}
+\providecommand{\norm}[1]{\left\lVert#1\right\rVert}
+
 \begin{document}
 
 \title{Math 269B, 2012 Winter, Homework 1}
@@ -68,9 +71,9 @@ A = \begin{pmatrix} 2 & 3 \\ 3 & 2 \end{pmatrix}.
 
 \begin{itemize}
 \item[1.] Implement the finite difference schemes in Problem 4.\ in the Theory section for $x \in [0,1]$, $t \in [0,T]$ for some final time $T$, $u(x,0) = u_0(x)$, and \emph{periodic} boundary conditions.
-\item[2.] Investigate the convergence of each scheme for $a = 1$ and $T = 1$. Use an appropriate relation between $k$ and $h$ to ensure convergence. Try using both a smooth initial condition (e.g., $u_0(x) = \sin(2 \pi x)$) and a non-smooth initial condition (e.g., $u_0(x) = 1 - 2 \lvert x - 1/2 \rvert$). Use the discrete $L^2$ norm to measure the error between your numerical solution and the true solution:
+\item[2.] Investigate the convergence of each scheme for $a = 1$ and $T = 1$. Use an appropriate relation between $k$ and $h$ to ensure convergence (if possible). Try using both a smooth initial condition (e.g., $u_0(x) = \sin(2 \pi x)$); a non-smooth initial condition (e.g., $u_0(x) = 1 - 2 \abs{x - 1/2}$); and a discontinuous initial condition (e.g., $u_0(x) = 0$ if $\abs{x - 1/2} > 1/4$ and $u_0(x) = 1$ if $\abs{x - 1/2} < 1/4$). Use the discrete $L^2$ norm to measure the error between your numerical solution and the true solution:
 \begin{equation*}
-\left\lVert w \right\rVert_h = \left( h \sum_m \left\lvert w_m \right\rvert^2 \right)^{1/2}.
+\norm{w}_h = \left( h \sum_m \abs{w_m}^2 \right)^{1/2}.
 \end{equation*}
 [Note: Due to periodicity, be sure to avoid double-counting the contributions at $x = 0$ and $x = 1$!] Plot the numerical solutions from each scheme at $t = T$ when $h = 1/100$. Which scheme do you think is better and why?
 \end{itemize}
