fixing spelling error and hourly rate

--- a/resumes/jeffrey.hellrung.references.tex
+++ b/resumes/jeffrey.hellrung.references.tex
@@ -56,7 +56,7 @@ Los Angeles, CA \ 90095-1555 \\
 \end{flushleft} &
 \begin{flushleft}
 Maggie Albert \\
-Graduate Advisor \\
+Graduate Adviser \\
 UCLA Mathematics Department \\
 (310) 825-4971 \\
 \verb+malbert@math.ucla.edu+ \\
@@ -64,7 +64,7 @@ UCLA Mathematics Department \\
 \begin{center}
 09/2005 (\$20.95/hr) \\
 to \\
-present (\$24.00/hr) \\
+present (\$28.00/hr) \\
 \end{center} &
 \begin{center}
 10 \\
