updating resume with gpa

--- a/resumes/jeffrey.hellrung.research.tex
+++ b/resumes/jeffrey.hellrung.research.tex
@@ -64,9 +64,9 @@ Los Angeles, CA \ 90025-5699 \hfill (801) 920-8773
 \begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
 {\small EDUCATION} &
 \begin{minipage}[t]{\CWb\columnwidth}
-\par \textbf{University of California Los Angeles, Los Angeles, CA} \hfill \textbf{GPA} : 3.948 \\
-Master of Arts in Mathematics, June 2006 \\
-pursuing a Ph.D. in Mathematics, June 2012 (expected) %\\
+\par \textbf{University of California Los Angeles, Los Angeles, CA} \\
+Master of Arts in Mathematics, June 2006 \hfill \textbf{GPA} : 3.909 \\
+Ph.D. in Mathematics, June 2012 (expected) \hfill \textbf{GPA} : 3.951%\\
 %\textbf{Coursework} : algebraic topology, algorithms, approximation algorithms, asymptotic methods (2 quar), combinatorics (2 quar), complex analysis (2 quar), computational fluid dynamics, computational linear algebra, continuum mechanics, control and optimization, differential equations (3 quar), differential geometry, differential topology, distributed algorithms, Fourier analysis, Lie groups and Lie algebras, numerical analysis (3 quar), real analysis (4 quar), scientific computing
 \vspace{\VS}
 \par \textbf{Harvey Mudd College, Claremont, CA} \hfill \textbf{Overall GPA} : 3.858 \\
