updating resumes and references

--- a/resumes/jeffrey.hellrung.references.tex
+++ b/resumes/jeffrey.hellrung.references.tex
@@ -78,6 +78,31 @@ Led discussion sections twice a week to review lecture, tutored at the Student M
 \end{flushleft} \\
 
 \begin{flushleft}
+College Bound \\
+(562) 407-2127 \\
+\verb+http://www.collegeboundca.org+ \\
+\end{flushleft} &
+\begin{flushleft}
+Kirk Kirkwood \\
+Director of Academic Affairs \\
+\verb+kkirkwood@collegeboundca.org+ \\
+\end{flushleft} &
+\begin{center}
+10/2009 (\$50.00/hr) \\
+to \\
+03/2010 (\$50.00/hr) \\
+\end{center} &
+\begin{center}
+1 \\
+\end{center} &
+\begin{center}
+Saturday School Teacher \\
+\end{center} &
+\begin{flushleft}
+Taught extracurricular mathematics to middle school and high school students. Inspired students to continue their education into college. \\
+\end{flushleft} \\
+
+\begin{flushleft}
 Walt Disney Animation Studios \\
 500 S. Buena Vista Street \\
 Burbank, CA \ 91521-4850 \\
