--- a/resumes/jeffrey.hellrung.research.tex
+++ b/resumes/jeffrey.hellrung.research.tex
@@ -114,12 +114,12 @@ Graduated with High Distinction, Honors in Mathematics %\\
 {\small PUBLICATIONS} &
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
-\par ``A Second-Order Virtual Node Algorithm for Nearly Incompressible Linear Elasticity in Irregular Domains.'' Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. 2011. (submitted)
-\par ``A Second-Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. Journal of Computational Physics, 2011. (accepted)
-\par ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran. International Journal for Numerical Methods in Engineering, 2011.
-\par ``Geometric Fracture Modeling in BOLT.'' \textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran. ACM SIGGRAPH 2009 (sketch).
-\par ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. Medicine Meets Virtual Reality 17, 2009.
-\par ``Risk assessment of real time digital control systems.'' M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006. Pages 409 - 415.
+\par Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' 2011. (submitted)
+\par \textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second-order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, 2011. (DOI:10.1016/j.jcp.2011.11.023)
+\par C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' International Journal for Numerical Methods in Engineering. Volume 88, Issue 10, pages 1042-1065, 9 December 2011. (DOI:10.1002/nme.3211)
+\par \textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran. ``Geometric fracture modeling in Bolt.'' SIGGRAPH 2009: Talks. (DOI:10.1145/1597990.1597997)
+\par E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' Studies in Health Technology and Informatics 2009; 142:313-8. (PMID:19377176)
+\par M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006. Pages 409 - 415. (DOI:10.1109/RAMS.2006.1677409)
 \end{minipage}
 \end{tabular}
 
