adding another programming problem

--- a/courses/ucla/2011-2012/winter/math269b/homework3/homework3.tex
+++ b/courses/ucla/2011-2012/winter/math269b/homework3/homework3.tex
@@ -68,7 +68,9 @@ is a second-order accurate scheme for the one-way wave equation (1.1.1). Show th
 
 \begin{itemize}
 
-\item[1.] For the one-way wave equation $u_t + a u_x = 0$, investigate how close the numerical solution to a finite difference scheme is to the solution to the corresponding modified equation. To be concrete, suppose a pulse initial condition $u_0(x) = \frac{1}{2} \left( 1 + \abs{x}/x \right)$, $x \in [-1,1]$, and periodic boundary conditions. Take $a = 1$, $k/h = 0.5$, and final time $T = 0.5$. Compare the following finite difference schemes: upwinding, Lax-Friedrichs, and Lax-Wendroff. Also, include a derivation of the respective corresponding modified equations. You may find solutions to the modified equations using any appropriate method (i.e., analytically or to a sufficiently high accuracy numerically).
+\item[1.] Solve $u_t + a u_x = 0$ numerically using the Lax-Friedrichs scheme. Take $a = 1$, $T = 1$, $x \in [0,1]$ with periodic boundary conditions, and $u_0(x) = \sin 2 \pi x$. Demonstrate convergence for various decreasing values of $\lambda := k/h$ (satisfying the stability criterion) by plotting the logarithm of the $L^2$-norm of the error (between the analytic solution and the numerical solution) versus the logarithm of $h$. Verify that the slope suggested by your plot agrees with theory, and estimate the error constant $C_{\lambda}$ in the relation $\text{error} = C_{\lambda} h^p$. Use enough values of $\lambda$ to estimate the relation between $C_{\lambda}$ and $\lambda$. What appears to happen to $C_{\lambda}$ as $\lambda \to 0+$, i.e., as you shrink $k$ relative to $h$? What happens if, instead of taking $k = \lambda h$, you take $k = h^2$? Explain your numerical results in the context of the theoretical convergence analysis of the Lax-Friedrichs scheme.
+
+\item[2.] For the one-way wave equation $u_t + a u_x = 0$, investigate how close the numerical solution to a finite difference scheme is to the solution to the corresponding modified equation. To be concrete, suppose a pulse initial condition $u_0(x) = \frac{1}{2} \left( 1 + \abs{x}/x \right)$, $x \in [-1,1]$, and periodic boundary conditions. Take $a = 1$, $k/h = 0.5$, and final time $T = 0.5$. Compare the following finite difference schemes: upwinding, Lax-Friedrichs, and Lax-Wendroff. Also, include a derivation of the respective corresponding modified equations. You may find solutions to the modified equations using any appropriate method (i.e., analytically or to a sufficiently high accuracy numerically).
 
 \end{itemize}
 
