--- a/courses/ucla/2011-2012/winter/math269b/homework3/homework3.tex
+++ b/courses/ucla/2011-2012/winter/math269b/homework3/homework3.tex
@@ -44,7 +44,7 @@ converge to solutions to the corresponding modified equation
 \begin{equation*}
 u_t + a u_x = \frac{h^2}{2k} \left( 1 - \left( \frac{a k}{h} \right)^2 \right) u_{xx}
 \end{equation*}
-to second order accuracy in $\ell^{\infty}$. I.e., show that $\abs{v^n_m - u_{k,h} \left( t_n,x_m \right)} \to 0$ as $h,k \to 0$ (according to the stability criterion), where the subscripts on $u_{k,h}$ only indicate that the solution to the modified equation is parameterized by $k,h$.
+to second order accuracy in $L^{\infty}$. I.e., show that $\abs{v^n_m - u_{k,h} \left( t_n,x_m \right)} \to 0$ as $h,k \to 0$ (according to the stability criterion), where the subscripts on $u_{k,h}$ only indicate that the solution to the modified equation is parameterized by $k,h$.
 
 \item[4.] (Strikwerda 4.1.2.) Show that the $(2,2)$ leapfrog scheme for $u_t + a u_{xxx} = f$ (see (2.2.15)) given by
 \begin{equation*}
