--- a/sdmgv/sdmgv.tex
+++ b/sdmgv/sdmgv.tex
@@ -78,7 +78,7 @@ Conditions (S0) and (S1) in Theorem \ref{thm:symmetry} are actually more general
 Expressing $L$ and $M$ in terms of $R$ then gives
 \begin{subequations} \label{eq:RLM}
 \begin{align}
-L & = \left( I - R^t A \right) \left( I - \widetilde{A} A \right), \\
+L & = \left( I - R^t A \right) \left( I - \widetilde{A} A \right) \left( I - R A \right), \\
 M & = \left( I - R^t A \right) \widetilde{A} \left( I - A R \vphantom{I - R^t A} \right) + \left( R + R^t - R^t A R \right).
 \end{align}
 \end{subequations}
