--- a/courses/ucla/2011-2012/winter/math269b/homework2/solutions2.tex
+++ b/courses/ucla/2011-2012/winter/math269b/homework2/solutions2.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
 
-\title{Math 269B, 2012 Winter, Homework 2 - Solutions}
+\title{Math 269B, 2012 Winter, Homework 2 (Solutions)}
 \date{February 13, 2012}
 \author{Professor Joseph Teran \and Jeffrey Lee Hellrung, Jr.}
 \maketitle
@@ -22,7 +22,7 @@
 
 \item[1.] (Strikwerda 2.1.9.) Finite Fourier Transforms. For a function $v_m$ defined on the integers, $m = 0, 1, \dotsc, M-1$, we can define the Fourier transform as
 \begin{equation*}
-\hat{v}_{\ell} = \sum_{m=0}^{M-1} e^{-2i\pi\ell m/M} v_m \quad \text{for} \ell = 0, \dotsc, M-1.
+\hat{v}_{\ell} = \sum_{m=0}^{M-1} e^{-2i\pi\ell m/M} v_m \quad \text{for } \ell = 0, \dotsc, M-1.
 \end{equation*}
 For this transform prove the Fourier inversion formula
 \begin{equation*}
@@ -54,11 +54,19 @@ Regarding the Parseval's relation,
 \begin{align*}
 \sum_{m=0}^{M-1} \abs{v_m}^2
 & = \frac{1}{M^2} \sum_{m=0}^{M-1} \abs{\sum_{\ell=0}^{M-1} e^{2i\pi\ell m/M} \hat{v}_{\ell}}^2 \\
-& = \frac{1}{M^2} \sum_{m=0}^{M-1} \left( \sum_{\ell=0}^{M-1} e^{2i\pi\ell m/M} \hat{v}_{\ell} \right) \left( \overline{\sum_{\ell'=0}^{M-1} e^{2i\pi\ell'm/M} \hat{v}_{\ell'}} \right) \\
+& = \frac{1}{M^2} \sum_{m=0}^{M-1} \left( \sum_{\ell=0}^{M-1} e^{2i\pi\ell m/M} \hat{v}_{\ell} \right) \overline{\left( \sum_{\ell'=0}^{M-1} e^{2i\pi\ell'm/M} \hat{v}_{\ell'} \right)} \\
 & = \frac{1}{M^2} \sum_{\ell=0}^{M-1} \sum_{\ell'=0}^{M-1} \sum_{m=0}^{M-1} e^{2i\pi \left( \ell - \ell' \right) m/M} \hat{v}_{\ell} \overline{\hat{v}_{\ell'}} \\
 & = \frac{1}{M} \sum_{\ell=0}^{M-1} \abs{\hat{v}_{\ell}}^2,
 \end{align*}
-as desired (since, when $\ell \neq \ell'$, the inner sum over $m$ sums out to $0$).
+as desired (since, when $\ell \neq \ell'$, the inner sum over $m$ sums out to $0$). Alternatively, we my derive Parseval's relation via the inversion formula:
+\begin{align*}
+\sum_{m=0}^{M-1} \abs{v_m}^2
+& = \sum_{m=0}^{M-1} v_m \overline{v_m} \\
+& = \frac{1}{M} \sum_{m=0}^{M-1} \sum_{\ell=0}^{M-1} e^{2\pi\ell m/M} \hat{v}_{\ell} \overline{v_m} \\
+& = \frac{1}{M} \sum_{\ell=0}^{M-1} \hat{v}_{\ell} \overline{\sum_{m=0}^{M-1} e^{-2\pi\ell m/M} v_m} \\
+& = \frac{1}{M} \sum_{\ell=0}^{M-1} \hat{v}_{\ell} \overline{\hat{v}_{\ell}} \\
+& = \frac{1}{M} \sum_{\ell=0}^{M-1} \abs{\hat{v}_{\ell}}^2.
+\end{align*}
 
 \item[2.] Prove convergence for the Beam-Warming scheme
 \begin{equation*}
@@ -76,10 +84,10 @@ Its symbol is thus
 \begin{align*}
 p_{k,h}(s,\xi) & = P_{k,h} \left( e^{skn + imh\xi} \right) / e^{skn + imh\xi} \\
                & = \frac{1}{k} \left( e^{sk} - 1 \right) + \frac{a}{2h} \left( 3 - 4 e^{-ih\xi} + e^{-2ih\xi} \right) - \frac{a^2k}{2h^2} \left( 1 - 2 e^{-ih\xi} + e^{-2ih\xi} \right) \\
-               & = \frac{1}{k} \left( sk + \frac{1}{2} s^2 k^2 + O \left( k^2 \right) \right) + \frac{a}{2h} \left( 2ih\xi + O \left( h^3 \right) \right) - \frac{a^2k}{2h^2} \left( -h^2 \xi^2 + O \left( h^3 \right) \right) \\
-               & = \left( 1 + \frac{k}{2} \left( s - ia\xi \right) \right) \left( s + ia\xi \right) + O \left( k^2 + kh + h^2 \right);
+               & = \frac{1}{k} \left( sk + \frac{1}{2} s^2 k^2 + O \left( k^3 \right) \right) + \frac{a}{2h} \left( 2ih\xi + O \left( h^3 \right) \right) - \frac{a^2k}{2h^2} \left( -h^2 \xi^2 + O \left( h^3 \right) \right) \\
+               & = \left( 1 + \frac{k}{2} \left( s - ia\xi \right) \right) \left( s + ia\xi \right) + O \left( k^2 + kh + h^2 \right).
 \end{align*}
-since the symbol of the differential operator $P = \partial_t + a \partial_x$ is $p = s + ia\xi$, this demonstrates that $P_{k,h}$ is consistent with $P$ (to second order if $k/h = O(1)$). Incidentally, it also suggests that the symbol $r_{k,h}$ of the difference operator $R_{k,h}$ should be (for example)
+Since the symbol of the differential operator $P = \partial_t + a \partial_x$ is $p = s + ia\xi$, this demonstrates that $P_{k,h}$ is consistent with $P$ to second order in $k,h$. Incidentally, it also suggests that the symbol $r_{k,h}$ of the difference operator $R_{k,h}$ should be (for example)
 \begin{align*}
 r_{k,h}(s,\xi) & = 1 + \frac{k}{2} \left( s - ia\xi \right) + O \left( k^2 + kh + h^2 \right) \\
                & = \frac{1}{2} \left( e^{sk} + 1 \right) - \frac{ak}{2h} \left( 1 - e^{-ih\xi} \right),
@@ -101,7 +109,7 @@ If we let $\alpha = 1 - ak/h$, then
 \begin{align*}
 \abs{g}^2 & = \abs{1 - \alpha^2 \left( 1 - \cos \theta \right) + i \alpha \sin \theta}^2 \\
           & = 1 + \alpha^4 \left( 1 - \cos \theta \right)^2 + \alpha^2 \sin^2 \theta - 2 \alpha^2 \left( 1 - \cos \theta \right) \\
-          & = 1 - \alpha^2 \left( 1 - \cos \theta \right)^2 \left( 1 - \alpha^2 \right),
+          & = 1 - \alpha^2 \left( 1 - \alpha^2 \right) \left( 1 - \cos \theta \right)^2,
 \end{align*}
 hence $\abs{g} \leq 1$ if and only if $\abs{\alpha} \leq 1$, which is equivalent to $0 \leq ak/h \leq 2$.
 
@@ -122,7 +130,7 @@ p_{k,h}(s,\xi) & = P_{k,h} \left( e^{skn + imh\xi} \right) / e^{skn + imh\xi} \\
                & = \left( 1 + \frac{1}{2} \left( sk + ih\xi \right) \right) \left( s + ia\xi \right) + O \left( h^2 + h k + k^2 \right); \\
 r_{k,h}(s,\xi) & \equiv 1.
 \end{align*}
-Since the symbol of the differential operator $P = \partial_t + a \partial_x$ is $p = s + ia\xi$, this shows that the box scheme as given by the difference operators $P_{k,h}$ and $R_{k,h}$ is consistent with $P$ to first order in $k$ and $h$. It also shows that we can actually achieve second order accuracy by modifying $r_{k,h}$ to
+Since the symbol of the differential operator $P = \partial_t + a \partial_x$ is $p = s + ia\xi$, this shows that the box scheme as given by the difference operators $P_{k,h}$ and $R_{k,h}$ is consistent with $P$ to first order in $k,h$. It also shows that we can actually achieve second order accuracy by modifying $r_{k,h}$ to
 \begin{align*}
 r'_{k,h}(s,\xi) & = 1 + \frac{1}{2} \left( sk + ih\xi \right) + O \left( k^2 + k h + h^2 \right) \\
                 & = \frac{1}{4} \left( 1 + e^{sk} \right) \left( 1 + e^{ih\xi} \right),
