--- a/courses/ucla/2011-2012/winter/math269b/homework4/homework4.tex
+++ b/courses/ucla/2011-2012/winter/math269b/homework4/homework4.tex
@@ -20,7 +20,25 @@
 
 \begin{itemize}
 
-\item[1.] Solve the heat equation $u_t = b u_{xx}$ on a \emph{periodic} domain $I \subset \mathbb{R}$. How does $\int_I u(t,x) dx$ vary with time $t$?
+\item[1.] Solve the heat equation $u_t = b u_{xx}$ on a interval $I \subset \mathbb{R}$ with \emph{periodic} boundary conditions. How does $\int_I u(t,x) dx$ vary with time $t$?
+
+\item[2.] (Strikwerda 6.1.4.) Use the representation (6.1.3) to verify the following estimates on the norms of $u(t,x)$:
+\begin{equation*}
+\norm{u(t,\cdot)}_1 \leq \norm{u_0}_1,
+\end{equation*}
+\begin{equation*}
+\norm{u(t,\cdot)}_{\infty} \leq \norm{u_0}_{\infty}.
+\end{equation*}
+Show that if $u_0$ is nonnegative, then
+\begin{equation*}
+\norm{u(t,\cdot)}_1 = \norm{u_0}_1.
+\end{equation*}
+
+\item[3.] Continuing from the previous problem, show the relation
+\begin{equation*}
+\lim_{M^-,M^+ \to \infty} \frac{1}{M^+ + M^-} \int_{-M^-}^{M^+} u(t,x) dx = \lim_{M^-,M^+ \to \infty} \frac{1}{M^+ + M^-} \int_{-M^-}^{M^+} u_0(x) dx,
+\end{equation*}
+provided the limit on the right exists.
 
 \end{itemize}
 
